--- a/example.env
+++ b/example.env
@@ -1,3 +1,6 @@
 NODE_ENV=development
 PORT=8000
 EXAMPLE="example-environmental-variable"
+CLOUD_NAME="example-cloud-name"
+CLOUD_API_KEY="ex-cloud-key"
+CLOUD_API_SECRET="ex-cloud-secret"
