--- a/package.json
+++ b/package.json
@@ -6,24 +6,34 @@
   "scripts": {
     "test": "mocha --require test/setup.js",
     "dev": "nodemon src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate:test": "env NODE_ENV=test npm run migrate",
+    "migrate:production": "env SSL=true DATABASE_URL=$(heroku config:get DATABASE_URL) npm run migrate",
     "start": "node src/server.js",
-    "predeploy": "npm audit",
+    "predeploy": "npm audit && npm run migrate:production",
     "deploy": "git push heroku master"
   },
   "keywords": [],
-  "author": "",
+  "engines": {
+    "node": "12.14.0"
+  },
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "helmet": "^3.21.2",
-    "morgan": "^1.9.1"
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "helmet": "^3.22.0",
+    "jsonwebtoken": "^8.5.0",
+    "knex": "^0.20.15",
+    "morgan": "^1.9.1",
+    "pg": "^7.8.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^7.0.1",
-    "nodemon": "^2.0.2",
-    "supertest": "^4.0.2"
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.9",
+    "postgrator-cli": "^3.1.0",
+    "supertest": "^3.3.0"
   }
 }
