--- a/package.json
+++ b/package.json
@@ -14,26 +14,26 @@
     "deploy": "git push heroku master"
   },
   "keywords": [],
-  "engines": {
-    "node": "12.14.0"
-  },
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^6.2.0",
-    "express": "^4.16.4",
-    "helmet": "^3.22.0",
-    "jsonwebtoken": "^8.5.0",
-    "knex": "^0.20.15",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "helmet": "^3.21.2",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.20.11",
+    "minimist": "^1.2.5",
     "morgan": "^1.9.1",
-    "pg": "^7.8.2"
+    "pg": "^7.18.2",
+    "xss": "^1.0.6"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^5.2.0",
-    "nodemon": "^1.18.9",
-    "postgrator-cli": "^3.1.0",
-    "supertest": "^3.3.0"
+    "mocha": "^7.0.1",
+    "nodemon": "^2.0.2",
+    "postgrator-cli": "^3.2.0",
+    "supertest": "^4.0.2"
   }
 }
